[package]
name = "piquant-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.6.1"
thiserror = "1.0.38"
tracing-subscriber = "0.3.16"
vek = "0.15.9"
byteorder = "1.4.3"
serde = { version = "1.0.152", features = ["derive"] }
flate2 = "1.0.25"
valence = { path = "../valence/crates/valence" }
valence_anvil = { path = "../valence/crates/valence_anvil", features = [
    "valence",
] }
valence_nbt = { path = "../valence/crates/valence_nbt" }
