[package]
name = "piquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piquant-world = { path = "../piquant-world" }
piquant-command = { path = "../piquant-command" }
piquant-macros = { path = "../piquant-macros" }

async-trait = "0.1.60"
tokio = { version = "1.24.1", features = ["full"] }
tracing-subscriber = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"

valence = { path = "../valence/crates/valence" }
